manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: spring-boot-app
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
